manage users feature implemented

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -40,6 +40,12 @@ body{
      align-items: center;
      justify-content: center;
  }
+.smalloaderContainer{
+     background-color: #fff;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
  .loader{
      width: 70px;
      height: 70px;
