--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1,4 +1,25 @@
 @media (min-width: 320px) and (max-width: 479px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .allti{
     flex-direction: column;
   }
@@ -357,7 +378,7 @@
     padding: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     margin-left: 0 !important;
   }
 
@@ -558,6 +579,27 @@
 }
 
 @media (min-width: 480px) and (max-width: 574px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .allti{
     flex-direction: column;
   }
@@ -924,7 +966,7 @@
     padding: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     margin-left: 0 !important;
   }
 
@@ -1124,6 +1166,27 @@
 }
 
 @media (min-width: 575px) and (max-width: 684px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .allti{
     flex-direction: column;
   }
@@ -1482,7 +1545,7 @@
     padding: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     margin-left: 0 !important;
   }
 
@@ -1682,6 +1745,27 @@
 }
 
 @media (min-width: 685px) and (max-width: 767px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .allti{
     flex-direction: column;
   }
@@ -2040,7 +2124,7 @@
     padding: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     margin-left: 0 !important;
   }
 
@@ -2240,6 +2324,27 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .allti{
     flex-direction: column;
   }
@@ -2594,7 +2699,7 @@
     padding: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     margin-left: 0 !important;
   }
 
@@ -2807,6 +2912,27 @@
 }
 
 @media (min-width: 992px) and (max-width: 1023px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .ttPlan .h-64{
     height: auto !important;
   }
@@ -2906,6 +3032,27 @@
 }
 
 @media (min-width: 1024px) and (max-width: 1199px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .ttPlan .h-64{
     height: auto !important;
   }
@@ -3008,6 +3155,27 @@
 }
 
 @media (min-width: 1200px) and (max-width: 1365px) {
+  .toolSet {
+    padding: 15px;
+}
+.toolSet .flex.justify-between.mt-12 {
+  flex-direction: column;
+}
+.toolSet .flex.-mx-2 {
+  flex-direction: column;
+}
+.toolSet button{
+  margin-top: 15px;
+}
+.toolSet .h-12{
+  height: auto;
+}
+.toolSet .cardHeight {
+  min-height: 20px !important;
+}
+  .addBtn{
+    margin-right: 15px;
+  }
   .ttPlan .h-64{
     height: auto !important;
   }
