--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -45,7 +45,7 @@
   }
 
   .para1 {
-    color: #fff;
+    color: #fff !important;
   }
 
   .trackerLogo img {
@@ -645,7 +645,7 @@
   }
 
   .para1 {
-    color: #fff;
+    color: #fff !important;
   }
 
   .trackerLogo img {
@@ -1234,7 +1234,7 @@
   }
 
   .para1 {
-    color: #fff;
+    color: #fff !important;
   }
 
   .trackerLogo img {
@@ -1823,7 +1823,7 @@
   }
 
   .para1 {
-    color: #fff;
+    color: #fff !important;
   }
 
   .trackerLogo img {
@@ -2408,7 +2408,7 @@
   }
 
   .para1 {
-    color: #fff;
+    color: #fff !important;
   }
 
   .trackerLogo img {
