mob loader fixed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -119,3 +119,13 @@ html {
 .customFood .medicationHeading {
   padding: 0 !important;
 }
+.bg-main{
+    padding: 0 15px;
+}
+.loaderContainer{
+    height: 100vh;
+    margin-top: -8vh;
+}
+.loaderContainer img{
+    width: unset !important;
+}
