manually add furbaby schedule update

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -127,8 +127,9 @@ html {
     padding: 0 15px;
 }
 .loaderContainer{
-    height: 100vh;
-    margin-top: -8vh;
+  height: 100vh;
+  margin-top: -8vh;
+  z-index: 2000;
 }
 .loaderContainer img{
     width: unset !important;
