--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -62,11 +62,12 @@ html {
 /* Fixes */
 .CircularProgressbar {
   width: 109px !important;
+    margin-left: 13px;
 }
 
 .progressDiv .coverPhoto {
-  margin-bottom: -70px;
-  margin-left: -36px;
+      margin-bottom: -70px;
+    margin-left: -9px;
 }
 
 .inProgFur.forline {
@@ -92,6 +93,7 @@ html {
 
 .cardSett .shadow-bord{
   width: 140px !important;
+  border-width: 3px;
 }
 
 .cardSett .forText {
