--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -175,8 +175,8 @@
     }
 
     .sec1 .completed {
-        top: 5px;
-        left: 5px;
+        /* top: 5px;
+        left: 5px; */
     }
 
     .cardForm .allButtons {
