--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap');
-@import "../../../node_modules/tailwindcss/base.css";
-@import "../../../node_modules/tailwindcss/components.css";
-@import "../../../node_modules/tailwindcss/utilities.css";
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
 
 body {
   font-family: 'Lato', sans-serif !important;
@@ -19,7 +11,7 @@ html {
 }
 
 .bg1 {
-  background-image: url("../images/image1.jpg");
+  /*background-image: url("../images/image1.jpg");*/
   background-size: cover;
   display: flex !important;
   flex: 1 !important;
