--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,7 +11,7 @@ html {
 }
 
 .bg1 {
-  /*background-image: url("../images/image1.jpg");*/
+  background-image: url("../images/image1.jpg");
   background-size: cover;
   display: flex !important;
   flex: 1 !important;
